2008-06-03  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	(hd_comp_mgr_restack):
	If only home applets are present, put home into active input mode.

2008-06-03  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-atoms.c:
	* src/hd-atoms.h:
	New atoms for home applet type.

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	(hd_comp_mgr_get_atom):
	Public accessor for the custom atom cache.

	* src/hd-home-view.c:
	* src/hd-home.c:
	Added HdHomeView::id construction property to persistently
	identify given view.

	* src/hd-wm.h:
	HdWmClientType enum for client types.

	* src/hd-wm.c
	Subclassed MBWindowManager::client_new().

	* src/Makefile.am:
	* src/hd-home-applet.h:
	* src/hd-home-applet.c:
	Start of custom client type for home applets.

2008-06-03  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	(hd_home_pan_full):
	Deal with view rollover.

2008-06-02  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c:
	Added construction time "home" property.
	Refactored motion handling.

	* src/hd-home.c:
	* src/hd-home.h:
	Translate view motion events to panning.

	* src/hd-util.c:
	(hd_util_grab_pointer):
	Added motion event mask.

2008-06-02  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	(hd_comp_mgr_restack):
	Put Home into active input mode when no application windows are
	present.

	src/hd-home-view.c:
	src/hd-home-view.h:
	src/hd-home.c:
	src/hd-home.h:
	Added active input mode for the Home actor when Home is
	on the top (all button events are getting trapped within Home
	views and only forwarded to children when appropriate).

	Added HdHome::background-clicked signal.

2008-06-02  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c

	* src/hd-home-view.c:
	* src/hd-home-view.h:
	Added ClutterButtonEvent parameter to thumbnail-clicked and
	background-clicked signals.

	* src/hd-home.c:
	* src/hd-switcher.c:
	* src/hd-util.c:
	* src/hd-util.h:
	(hd_util_grab_pointer):
	(hd_util_ungrab_pointer):
	Extracted pointer grabbing from home/mgr.
